[gd_scene load_steps=6 format=3 uid="uid://b4gp7mhg67lwc"]

[ext_resource type="Script" path="res://UI/FetchNumber/FetchNumber.gd" id="1_7feip"]

[sub_resource type="Animation" id="Animation_u4uby"]
resource_name = "spawn"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animationVect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(0.466517, 0.5, 0.535887, 0.574349),
"update": 0,
"values": [Vector2(0, 0), Vector2(25, -20), Vector2(44, -6), Vector2(50, 19)]
}

[sub_resource type="Animation" id="Animation_t06dc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animationVect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frr4v"]
_data = {
"RESET": SubResource("Animation_t06dc"),
"spawn": SubResource("Animation_u4uby")
}

[sub_resource type="LabelSettings" id="LabelSettings_aw3e4"]
font_size = 36
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.396078)
shadow_offset = Vector2(4, 4)

[node name="FetchNumber" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_7feip")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_frr4v")
}

[node name="NumberLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 53.0
offset_bottom = 36.0
text = "Test"
label_settings = SubResource("LabelSettings_aw3e4")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
